--- a/Learn.html
+++ b/Learn.html
@@ -94,7 +94,7 @@
                     <a href="https://www.maxon.net/en/"><div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
                         <h3>Cinema 4D</h3></a>
-                        <p>create advanced 3D graphics but need a helping hand to ensure you create jaw-dropping graphics quickly and easily, then Cinema 4D is the choice for you -- Maxon</p>
+                        <p>Creates advanced 3D graphics but need a helping hand to ensure you create jaw-dropping graphics quickly and easily.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -109,14 +109,14 @@
                     <a href="https://unity3d.com/"><div class="service-box">
                         <i class="fa fa-4x fa-keyboard-o text-primary sr-icons"></i>
                         <h3>Unity3D</h3></a>
-                        <p>Unity3D is a powerful cross-platform 3D engine and a user friendly development environment. Easy enough for the beginner and powerful enough for the expert; Unity should interest anybody who wants to easily create 3D games and applications for mobile, desktop, the web, and consoles. -- https://code.tutsplus.com/tutorials/introduction-to-unity3d--mobile-10752</p>
+                        <p>Unity3D is a powerful cross-platform 3D engine and a user friendly development environment.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <a href="http://getbootstrap.com/"><div class="service-box">
                         <i class="fa fa-4x fa-laptop text-primary sr-icons"></i>
                         <h3>Bootstrap</h3></a>
-                        <p></p>
+                        <p>Bootstrap, a sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
                     </div>
                 </div>
             </div>
